【新增】新增店员季报.

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -56,10 +56,10 @@ mu.order.pt=&#79;&#114;&#100;&#101;&#110;&#115;&#32;&#100;&#101;&#32;&#109;&#101
 mu.daily=&#68;&#101;&#99;&#108;&#97;&#114;&#97;&#231;&#227;&#111;&#32;&#101;&#115;&#116;&#97;&#116;&#237;&#115;&#116;&#105;&#99;&#97;
 mu.daily.detail=&#68;&#101;&#116;&#97;&#108;&#104;&#101;&#115;&#32;&#100;&#97;&#115;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#115;&#32;&#101;&#32;&#115;&#97;&#237;&#100;&#97;&#115;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#100;&#111;&#115;&#32;&#100;&#105;&#225;&#114;&#105;&#97;&#115;
 mu.expend.item=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#100;&#101;&#115;&#112;&#101;&#115;&#97;&#115;
-mu.region.stock.daily=&#21306;&#22495;&#24215;&#38271;&#27599;&#26085;&#36164;&#37329;&#36827;&#20986;&#36134;&#26126;&#32454;
-mu.stock.quarterly=&#38646;&#21806;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
-mu.wms.stock.quarterly=&#20179;&#24211;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
-mu.region.stock.quarterly=&#21306;&#22495;&#24215;&#38271;&#23395;&#24230;&#25253;&#34920;
+mu.region.stock.daily=&#68;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#105;&#97;&#114;&#105;&#111;&#115;&#32;&#100;&#101;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#32;&#121;&#32;&#115;&#97;&#108;&#105;&#100;&#97;&#32;&#100;&#101;&#32;&#102;&#111;&#110;&#100;&#111;&#115;&#32;&#100;&#101;&#32;&#108;&#111;&#115;&#32;&#100;&#105;&#114;&#101;&#99;&#116;&#111;&#114;&#101;&#115;&#32;&#100;&#101;&#32;&#116;&#105;&#101;&#110;&#100;&#97;&#115;&#32;&#114;&#101;&#103;&#105;&#111;&#110;&#97;&#108;&#101;&#115;
+mu.stock.quarterly=&#73;&#110;&#102;&#111;&#114;&#109;&#101;&#32;&#116;&#114;&#105;&#109;&#101;&#115;&#116;&#114;&#97;&#108;&#32;&#100;&#101;&#32;&#118;&#101;&#110;&#116;&#97;&#115;&#32;&#97;&#108;&#32;&#112;&#111;&#114;&#32;&#109;&#101;&#110;&#111;&#114;
+mu.wms.stock.quarterly=&#73;&#110;&#102;&#111;&#114;&#109;&#101;&#32;&#116;&#114;&#105;&#109;&#101;&#115;&#116;&#114;&#97;&#108;&#32;&#100;&#101;&#108;&#32;&#101;&#109;&#112;&#108;&#101;&#97;&#100;&#111;&#32;&#100;&#101;&#32;&#97;&#108;&#109;&#97;&#99;&#233;&#110;
+mu.region.stock.quarterly=&#73;&#110;&#102;&#111;&#114;&#109;&#101;&#115;&#32;&#116;&#114;&#105;&#109;&#101;&#115;&#116;&#114;&#97;&#108;&#101;&#115;&#32;&#100;&#101;&#32;&#108;&#111;&#115;&#32;&#100;&#105;&#114;&#101;&#99;&#116;&#111;&#114;&#101;&#115;&#32;&#100;&#101;&#32;&#116;&#105;&#101;&#110;&#100;&#97;&#115;&#32;&#114;&#101;&#103;&#105;&#111;&#110;&#97;&#108;&#101;&#115;
 mu.order.verify=&#86;&#101;&#114;&#105;&#102;&#105;&#99;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;&#115;
 mu.trade.stock=&#67;&#111;&#109;&#112;&#114;&#97;&#115;&#32;&#99;&#111;&#109;&#101;&#114;&#99;&#105;&#97;&#105;&#115;
 ## Message
@@ -72,6 +72,9 @@ message.goods.in.fail=&#73;&#109;&#112;&#111;&#114;&#116;&#97;&#231;&#227;&#111;
 message.select.file=&#83;&#101;&#108;&#101;&#99;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#105;&#99;&#104;&#101;&#105;&#114;&#111;&#115;
 message.confirm=&#99;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;
 message.cancel=&#99;&#97;&#110;&#99;&#101;&#108;&#97;&#99;&#105;&#243;&#110;
+message.fail=&#69;&#108;&#32;&#102;&#114;&#97;&#99;&#97;&#115;&#111;
+message.success=&#69;&#108;&#32;&#233;&#120;&#105;&#116;&#111;
+message.daily.make.detail=&#83;&#105;&#32;&#115;&#101;&#32;&#116;&#114;&#97;&#116;&#97;&#32;&#100;&#101;&#32;&#117;&#110;&#97;&#32;&#110;&#117;&#101;&#118;&#97;&#32;&#114;&#101;&#103;&#105;&#243;&#110;&#44;&#32;&#108;&#111;&#115;&#32;&#100;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#101;&#32;&#108;&#97;&#32;&#115;&#97;&#108;&#105;&#100;&#97;&#32;&#100;&#101;&#32;&#102;&#111;&#110;&#100;&#111;&#115;&#32;&#100;&#101;&#108;&#32;&#100;&#237;&#97;
 ## Status
 status.normal=&#78;&#111;&#114;&#109;&#97;&#108;
 status.disable=&#100;&#101;&#115;&#97;&#99;&#116;&#105;&#118;&#97;&#114;&#10;&#10;
@@ -211,3 +214,21 @@ commit.finishcommit=&#69;&#118;&#97;&#108;&#117;&#97;&#99;&#105;&#243;&#110;&#32
 commit.entity.score=&#76;&#97;&#32;&#112;&#117;&#110;&#116;&#117;&#97;&#99;&#105;&#243;&#110;
 commit.entity.commit=&#99;&#111;&#109;&#101;&#110;&#116;&#97;&#114;&#105;&#111;&#115;
 commit.dialog.name=&#69;&#118;&#97;&#108;&#117;&#97;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
+## stock
+region.stock.daily.in=&#101;&#110;
+region.stock.daily.out=&#103;&#97;&#115;&#116;&#111;&#115;
+region.stock.daily.store=&#80;&#117;&#110;&#116;&#111;&#115;&#32;&#100;&#101;&#32;&#118;&#101;&#110;&#116;&#97;&#32;&#97;&#108;&#32;&#112;&#111;&#114;&#32;&#109;&#101;&#110;&#111;&#114;
+region.stock.daily.income=&#73;&#110;&#103;&#114;&#101;&#115;&#111;&#115;&#32;&#100;&#105;&#97;&#114;&#105;&#111;&#115;
+region.stock.daily.income.total=&#84;&#111;&#116;&#97;&#108;&#32;&#97;&#99;&#117;&#109;&#117;&#108;&#97;&#100;&#111;
+region.stock.daily.type=&#99;&#97;&#116;&#101;&#103;&#111;&#114;&#237;&#97;&#115;
+region.stock.daily.project=&#69;&#108;&#32;&#112;&#114;&#111;&#121;&#101;&#99;&#116;&#111;
+region.stock.daily.price=&#105;&#109;&#112;&#111;&#114;&#116;&#101;
+region.stock.daily.exprice.total=&#84;&#111;&#116;&#97;&#108;&#32;&#100;&#101;&#32;&#108;&#111;&#115;&#32;&#103;&#97;&#115;&#116;&#111;&#115;
+region.stock.daily.safe=&#67;&#97;&#106;&#97;&#32;&#102;&#117;&#101;&#114;&#116;&#101;&#10;
+region.stock.daily.deposit=&#108;&#97;&#115;
+region.stock.daily.cal=&#69;&#108;&#32;&#99;&#225;&#108;&#99;&#117;&#108;&#111;&#10;
+region.stock.daily.zcmx=&#68;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#101;&#32;&#108;&#111;&#115;&#32;&#110;&#117;&#101;&#118;&#111;&#115;&#32;&#103;&#97;&#115;&#116;&#111;&#115;
+region.stock.daily.bjzcmx=&#69;&#100;&#105;&#116;&#32;&#101;&#120;&#112;&#101;&#110;&#100;&#105;&#116;&#117;&#114;&#101;&#32;&#100;&#101;&#116;&#97;&#105;&#108;&#115;
+region.stock.daily.datatime=&#102;&#101;&#99;&#104;&#97;
+region.stock.daily.bank=&#68;&#101;&#112;&#243;&#115;&#105;&#116;&#111;&#32;&#98;&#97;&#110;&#99;&#97;&#114;&#105;&#111;
+region.stock.daily.title=&#68;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#101;&#32;&#108;&#97;&#115;&#32;&#115;&#97;&#108;&#105;&#100;&#97;&#115;&#32;&#100;&#101;&#32;&#102;&#111;&#110;&#100;&#111;&#115;&#32;&#100;&#101;&#108;&#32;&#100;&#237;&#97;&#32;&#112;&#97;&#114;&#97;&#32;&#108;&#97;&#32;&#114;&#101;&#103;&#105;&#243;&#110;
