【新增】新增店员季报.

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -100,6 +100,7 @@ user.email=&#69;&#110;&#100;&#101;&#114;&#101;&#231;&#111;&#32;&#100;&#101;&#32;
 user.phone=&#78;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;&#32;&#116;&#101;&#108;&#101;&#109;&#243;&#118;&#101;&#108;
 user.roles=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;&#10;
 user.btn.mpass=&#67;&#97;&#109;&#98;&#105;&#97;&#114;&#32;&#108;&#97;&#32;&#99;&#111;&#110;&#116;&#114;&#97;&#115;&#101;&#241;&#97;
+user.region=&#65;&#116;&#116;&#114;&#105;&#98;&#117;&#116;&#105;&#111;&#110;&#32;&#97;&#114;&#101;&#97;
 ## Stock
 stock.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#101;&#110;&#116;&#114;&#101;&#112;&#111;&#115;&#116;&#111;
 stock.parent=&#68;&#101;&#112;&#243;&#115;&#105;&#116;&#111;&#32;&#68;&#79;&#83;&#32;&#80;&#97;&#105;&#115;
