--- a/src/main/resources/resource/global.properties
+++ b/src/main/resources/resource/global.properties
@@ -5,12 +5,12 @@ SYSTEM_CONFIRM_SHIP_DAYS=0.02
 
 #FTP相关配置
 #FTP的IP地址
-FTP_ADDRESS=47.101.150.9
+FTP_ADDRESS=47.74.182.66
 FTP_PORT=21
 FTP_USERNAME=image_yunqiang_com
 FTP_PASSWORD=ysW7zzdywFFsEEnB
-FTP_BASE_PATH=/www/wwwroot/image.yunqiang.com
+FTP_BASE_PATH=/www/wwwroot/yqjtw.shuzi.net.cn
 
 #图片服务器的相关配置
 #图片服务器的基础url
-IMAGE_BASE_URL=http://47.101.150.9:81
+IMAGE_BASE_URL=http://47.74.182.66:81
