--- a/src/main/resources/resource/jdbc.properties
+++ b/src/main/resources/resource/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.151:3306/db_yunqiang?characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://127.0.0.1:3306/yunqiang?characterEncoding=utf-8
+jdbc.username=yunqiang
+jdbc.password=5ExxdKBCNiX5RALY
