--- a/src/main/resources/resource/global.properties
+++ b/src/main/resources/resource/global.properties
@@ -5,6 +5,7 @@ SYSTEM_CONFIRM_SHIP_DAYS=0.02
 
 #FTP相关配置
 #FTP的IP地址
+# env:47.74.182.66, pro:127.0.0.1
 FTP_ADDRESS=127.0.0.1
 FTP_PORT=21
 FTP_USERNAME=image_yunqiang_com
