--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -62,6 +62,8 @@ mu.wms.stock.quarterly=&#73;&#110;&#102;&#111;&#114;&#109;&#101;&#32;&#116;&#114
 mu.region.stock.quarterly=&#73;&#110;&#102;&#111;&#114;&#109;&#101;&#115;&#32;&#116;&#114;&#105;&#109;&#101;&#115;&#116;&#114;&#97;&#108;&#101;&#115;&#32;&#100;&#101;&#32;&#108;&#111;&#115;&#32;&#100;&#105;&#114;&#101;&#99;&#116;&#111;&#114;&#101;&#115;&#32;&#100;&#101;&#32;&#116;&#105;&#101;&#110;&#100;&#97;&#115;&#32;&#114;&#101;&#103;&#105;&#111;&#110;&#97;&#108;&#101;&#115;
 mu.order.verify=&#86;&#101;&#114;&#105;&#102;&#105;&#99;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;&#115;
 mu.trade.stock=&#67;&#111;&#109;&#112;&#114;&#97;&#115;&#32;&#99;&#111;&#109;&#101;&#114;&#99;&#105;&#97;&#105;&#115;
+mu.st.inventory=&#69;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.pt.view=&#69;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
