--- a/src/main/resources/resource/quartz.properties
+++ b/src/main/resources/resource/quartz.properties
@@ -1,4 +1,4 @@
 quartz.driver=com.mysql.jdbc.Driver
 quartz.url=jdbc:mysql://127.0.0.1:3306/db_quartz?characterEncoding=utf-8
-quartz.username=quartz
-quartz.password=En6iicxm2WSfDeRJ
+quartz.username=root
+quartz.password=rj8362137db
