--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -48,7 +48,7 @@ mu.st.info=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&
 mu.st.out=&#83;&#97;&#237;&#100;&#97;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
-mu.pt.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.pt.type=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#99;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;
 mu.pt.prop=&#65;&#116;&#114;&#105;&#98;&#117;&#116;&#111;&#115;&#32;&#100;&#97;&#115;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.ppv=&#86;&#97;&#108;&#111;&#114;&#32;&#100;&#97;&#32;&#111;&#112;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#112;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;
 mu.order=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;&#115;
@@ -64,6 +64,7 @@ mu.order.verify=&#86;&#101;&#114;&#105;&#102;&#105;&#99;&#97;&#231;&#227;&#111;&
 mu.trade.stock=&#67;&#111;&#109;&#112;&#114;&#97;&#115;&#32;&#99;&#111;&#109;&#101;&#114;&#99;&#105;&#97;&#105;&#115;
 mu.st.inventory=&#69;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.view=&#69;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.st.shunt=&#84;&#114;&#105;&#97;&#103;&#101;&#109;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
@@ -131,9 +132,9 @@ product.name=&#78;&#111;&#109;&#101;&#32;&#68;&#97;&#32;&#109;&#101;&#114;&#99;&
 product.stock=&#80;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;
 product.productType=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;
 product.code=&#67;&#243;&#100;&#105;&#103;&#111;&#32;&#100;&#111;&#32;&#105;&#116;&#101;&#109;
-product.state=&#29366;&#24577;
-product.saleCount=&#24211;&#23384;
-product.viewProperties=&#21830;&#21697;&#26174;&#31034;&#23646;&#24615;
+product.state=&#101;&#115;&#116;&#97;&#100;&#111;
+product.saleCount=&#105;&#110;&#118;&#101;&#110;&#116;&#225;&#114;&#105;&#111;&#115;
+product.viewProperties=&#65;&#116;&#114;&#105;&#98;&#117;&#116;&#111;&#115;&#32;&#100;&#101;&#32;&#97;&#112;&#114;&#101;&#115;&#101;&#110;&#116;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 product.properties=&#67;&#111;&#110;&#106;&#117;&#110;&#116;&#111;&#32;&#100;&#101;&#32;&#65;&#116;&#114;&#105;&#98;&#117;&#116;&#111;&#115;&#32;&#67;&#111;&#109;&#109;&#111;&#100;&#105;&#116;&#121;
 product.resources=&#73;&#109;&#97;&#103;&#101;&#109;
 product.remark=&#79;&#98;&#115;&#101;&#114;&#118;&#97;&#231;&#245;&#101;&#115;
