--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,3 +16,12 @@ log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.java.sql.Connection=DEBUG 
 log4j.logger.java.sql.Statement=DEBUG 
 log4j.logger.java.sql.PreparedStatement=DEBUG
+
+
+### log file ###
+log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.D.File =../logs/yunqiang-info.log
+log4j.appender.D.Append = true
+log4j.appender.D.Threshold = INFO 
+log4j.appender.D.layout = org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
