【新增】仓管员追加商品到订单

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -197,7 +197,7 @@ order.detail=&#84;&#104;&#101;&#32;&#100;&#101;&#116;&#97;&#105;&#108;
 order.send=&#84;&#104;&#101;&#32;&#100;&#101;&#108;&#105;&#118;&#101;&#114;&#121;
 order.print=&#105;&#109;&#112;&#114;&#105;&#109;&#105;&#114;
 order.state.dsp=&#80;&#101;&#110;&#100;&#105;&#101;&#110;&#116;&#101;&#32;&#100;&#101;&#32;&#97;&#112;&#114;&#111;&#98;&#97;&#99;&#105;&#243;&#110;
-order.state.dfh=&#80;&#114;&#111;&#100;&#117;&#99;&#116;&#111;&#115;&#32;&#112;&#101;&#110;&#100;&#105;&#101;&#110;&#116;&#101;&#115;&#32;&#100;&#101;&#32;&#101;&#110;&#118;&#237;&#111;
+order.state.dfh=enviado
 order.state.dsh=&#77;&#101;&#114;&#99;&#97;&#110;&#99;&#237;&#97;&#115;&#32;&#97;&#32;&#114;&#101;&#99;&#105;&#98;&#105;&#114;
 order.state.ddwc=&#79;&#114;&#100;&#101;&#110;&#32;&#99;&#117;&#109;&#112;&#108;&#105;&#100;&#97;
 order.state.ddgb=&#67;&#105;&#101;&#114;&#114;&#101;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
@@ -213,7 +213,7 @@ order.detail.property=&#112;&#114;&#111;&#112;&#105;&#101;&#100;&#97;&#100;&#101
 order.detail.amount=&#69;&#108;&#32;&#110;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;
 order.detail.volume.total=&#86;&#111;&#108;&#117;&#109;&#101;&#110;&#32;&#116;&#111;&#116;&#97;&#108;
 ## commit
-commit.waitcommit=&#101;&#118;&#97;&#108;&#117;&#97;&#100;&#111;
+commit.waitcommit=A avaliar
 commit.finishcommit=&#69;&#118;&#97;&#108;&#117;&#97;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
 commit.entity.score=&#76;&#97;&#32;&#112;&#117;&#110;&#116;&#117;&#97;&#99;&#105;&#243;&#110;
 commit.entity.commit=&#99;&#111;&#109;&#101;&#110;&#116;&#97;&#114;&#105;&#111;&#115;
