--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.17</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>-->
         <!-- Quartz任务调度 -->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
