【新增】商品批量导出

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,12 @@
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <!-- ureport2 -->
+        <dependency>
+            <groupId>com.bstek.ureport</groupId>
+            <artifactId>ureport2-console</artifactId>
+            <version>2.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
