--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -68,7 +68,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <servlet>
+    <!--<servlet>
         <servlet-name>ureportServlet</servlet-name>
         <servlet-class>com.bstek.ureport.console.UReportServlet</servlet-class>
     </servlet>
@@ -79,6 +79,6 @@
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+    </welcome-file-list>-->
 
 </web-app>
